<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/linearColumnc"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            style="@style/groupStylewhite_A700">

            <LinearLayout
                android:gravity="start"
                android:id="@+id/linearRowc"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_104pxh"
                android:layout_marginStart="@dimen/_104pxh"
                android:layout_marginTop="@dimen/_29pxv"
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                style="@style/groupStylewhite_A700cornerRadius">

                <TextView
                    android:id="@+id/txtC"
                    style="@style/txtJuaregular60"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_24pxh"
                    android:layout_marginTop="@dimen/_32pxv"
                    android:layout_marginBottom="@dimen/_29pxv"
                    android:layout_weight="0.36"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/lbl_c"
                    tools:text="@string/lbl_c" />

                <LinearLayout
                    android:gravity="start"
                    android:id="@+id/linearColumnhat"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_37pxv"
                    android:layout_marginEnd="@dimen/_11pxh"
                    android:layout_marginTop="@dimen/_33pxv"
                    android:layout_weight="0.64"
                    android:layout_width="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:ellipsize="end"
                        android:id="@+id/txtHat"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@string/lbl_hat"
                        style="@style/txtGochiHandregular44"
                        tools:text="@string/lbl_hat" />

                    <TextView
                        android:ellipsize="end"
                        android:id="@+id/txtApp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_marginStart="@dimen/_1pxh"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@string/lbl_app"
                        style="@style/txtJuaregular24"
                        tools:text="@string/lbl_app" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:ellipsize="end"
                android:gravity="start"
                android:id="@+id/txtCreateanaccou"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_13pxh"
                android:layout_marginStart="@dimen/_13pxh"
                android:layout_marginTop="@dimen/_20pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@string/msg_hi_wecome_back"
                style="@style/txtManropesemibold25"
                tools:text="@string/msg_hi_wecome_back" />

            <TextView
                android:ellipsize="end"
                android:gravity="start"
                android:id="@+id/txtConnectwithyo"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_13pxh"
                android:layout_marginStart="@dimen/_13pxh"
                android:layout_marginTop="@dimen/_20pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@string/msg_hello_again_yo"
                style="@style/txtManropesemibold14"
                tools:text="@string/msg_hello_again_yo" />

            <EditText
                android:background="@drawable/rectangle_border_gray_400_radius_10"
                android:ellipsize="end"
                android:hint="@string/lbl_email"
                android:id="@+id/etEmail"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_13pxh"
                android:layout_marginStart="@dimen/_13pxh"
                android:layout_marginTop="@dimen/_20pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_21pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_20pxh"
                android:paddingTop="@dimen/_19pxv"
                android:singleLine="true"
                android:textColorHint="@color/gray_400"
                style="@style/etRoundedOutline"
                tools:ignore="Autofill" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:hintEnabled="false"
                android:layout_marginTop="@dimen/_12pxh"
                app:boxBackgroundMode="none"
                >
                <EditText
                    android:background="@drawable/rectangle_border_gray_400_radius_10"
                    android:ellipsize="end"
                    android:id="@+id/etPass"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_13pxh"
                    android:layout_marginStart="@dimen/_13pxh"
                    android:layout_marginTop="@dimen/_20pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_21pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:hint="@string/lbl_passwork"
                    android:paddingStart="@dimen/_20pxh"
                    android:paddingTop="@dimen/_19pxv"
                    android:singleLine="true"
                    android:textColorHint="@color/gray_400"
                    style="@style/etRoundedOutline"
                    tools:ignore="Autofill" />
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12pxh"
                android:layout_marginTop="@dimen/_18pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:orientation="horizontal">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:id="@+id/txtRemember"
                    android:text="@string/txtRemember"/>

                <TextView
                    android:id="@+id/txtForgotPass"
                    style="@style/txtManropesemibold14_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_125pxh"
                    android:text="@string/lbl_forgot_password">

                </TextView>
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end"
                android:gravity="center"
                android:id="@+id/btnLogin"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_13pxh"
                android:layout_marginStart="@dimen/_13pxh"
                android:layout_marginTop="@dimen/_19pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_19pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_19pxv"
                android:singleLine="true"
                android:text="@string/lbl_login"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_8"
                tools:text="@string/lbl_login" />

            <LinearLayout
                android:gravity="start"
                android:id="@+id/linearOr"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_13pxh"
                android:layout_marginStart="@dimen/_13pxh"
                android:layout_marginTop="@dimen/_19pxv"
                android:layout_width="match_parent"
                android:orientation="horizontal">

                <View
                    android:background="@color/black_900"
                    android:id="@+id/lineVectorSeventyNine"
                    android:layout_height="@dimen/_1pxv"
                    android:layout_marginBottom="@dimen/_7pxv"
                    android:layout_marginTop="@dimen/_9pxv"
                    android:layout_weight="0.33"
                    android:layout_width="0dp" />

                <TextView
                    android:ellipsize="end"
                    android:id="@+id/txtOrcontinuewit"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_weight="0.33"
                    android:layout_width="0dp"
                    android:singleLine="true"
                    android:text="@string/msg_or_continue_wit"
                    style="@style/txtPoppinsmedium12"
                    tools:text="@string/msg_or_continue_wit" />

                <View
                    android:background="@color/black_900"
                    android:id="@+id/lineVectorEighty"
                    android:layout_height="@dimen/_1pxv"
                    android:layout_marginBottom="@dimen/_7pxv"
                    android:layout_marginStart="@dimen/_15pxh"
                    android:layout_marginTop="@dimen/_9pxv"
                    android:layout_weight="0.33"
                    android:layout_width="0dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearRowgoogle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_13pxh"
                android:layout_marginTop="@dimen/_40pxv"
                android:layout_marginEnd="@dimen/_13pxh"
                android:layout_marginBottom="@dimen/_29pxv"
                android:gravity="center"
                android:orientation="horizontal">

                <FrameLayout
                    android:id="@+id/frameStackgoogle"
                    style="@style/groupStylewhite_1"
                    android:layout_width="@dimen/_88pxh"
                    android:layout_height="@dimen/_48pxv">

                    <ImageView
                        android:id="@+id/imageGoogle"
                        android:layout_width="@dimen/_26pxh"
                        android:layout_height="@dimen/_26pxh"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_30pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_marginEnd="@dimen/_30pxh"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_google"
                        tools:ignore="ContentDescription"
                        tools:src="@drawable/img_google" />
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/frameStackvolume"
                    style="@style/groupStylewhite_1"
                    android:layout_width="@dimen/_88pxh"
                    android:layout_height="@dimen/_48pxv"
                    android:layout_marginStart="@dimen/_32pxh">

                    <ImageView
                        android:id="@+id/imageVolume"
                        android:layout_width="@dimen/_26pxh"
                        android:layout_height="@dimen/_26pxh"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_33pxh"
                        android:layout_marginTop="@dimen/_11pxv"
                        android:layout_marginEnd="@dimen/_33pxh"
                        android:layout_marginBottom="@dimen/_11pxv"
                        android:scaleType="fitXY"
                        android:src="@drawable/icon_github"
                        tools:ignore="ContentDescription"
                        tools:src="@drawable/icon_github" />
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/frameStacktwitter"
                    style="@style/groupStylewhite_1"
                    android:layout_width="@dimen/_87pxh"
                    android:layout_height="@dimen/_48pxv"
                    android:layout_marginStart="@dimen/_32pxh">

                    <ImageView
                        android:id="@+id/imageTwitter"
                        android:layout_width="@dimen/_30pxh"
                        android:layout_height="@dimen/_25pxh"
                        android:layout_gravity="bottom|center"
                        android:layout_marginStart="@dimen/_27pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_marginEnd="@dimen/_27pxh"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_twitter"
                        tools:ignore="ContentDescription"
                        tools:src="@drawable/img_twitter" />
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:gravity="center_vertical"
                android:id="@+id/linearJoinUs"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_63pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_50pxv"
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <TextView
                    android:ellipsize="end"
                    android:id="@+id/txtConfirmation"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_weight="0.8"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@string/msg_don_t_have_an_a"
                    style="@style/txtPoppinsregular12"
                    tools:text="@string/msg_don_t_have_an_a" />

                <TextView
                    android:ellipsize="end"
                    android:id="@+id/txtRegister"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.26"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@string/lbl_register"
                    style="@style/txtPoppinsbold12" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</layout>