<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearProfileEdit"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">

        <ImageView android:id="@+id/imgAvatar"
            android:layout_gravity="bottom|center"
            android:layout_height="@dimen/_142pxh"
            android:layout_marginEnd="@dimen/_124pxh"
            android:layout_marginStart="@dimen/_124pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="@dimen/_142pxh"
            android:scaleType="centerCrop"
            android:src="@drawable/no_avatar"
            tools:ignore="ContentDescription"/>

        <TextView android:ellipsize="end"
            android:id="@+id/txtChangePicture"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_36pxh"
            android:layout_marginStart="@dimen/_36pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@string/profile_picture"
            style="@style/txtPoppinsregular12"/>
        <TextView android:ellipsize="end" android:id="@+id/txtUsername"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_36pxh"
            android:layout_marginStart="@dimen/_36pxh"
            android:layout_marginTop="@dimen/_19pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@string/username"
            style="@style/txtPoppinsmedium14"/>
        <EditText
            android:background="@drawable/rectangle_border_gray_500_radius_8"
            android:ellipsize="end" android:hint="@string/name"
            android:id="@+id/etName" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_36pxh"
            android:layout_marginStart="@dimen/_36pxh"
            android:layout_marginTop="@dimen/_2pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_9pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_12pxh"
            android:paddingTop="@dimen/_12pxv" android:singleLine="true"
            android:textColorHint="@color/black_900"
            style="@style/etRoundedOutline" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end" android:id="@+id/txtGender"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_36pxh"
            android:layout_marginStart="@dimen/_36pxh"
            android:layout_marginTop="@dimen/_19pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="Gender"
            style="@style/txtPoppinsmedium14"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:id="@+id/rgGender"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_23pxh"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:text="Male"
                android:id="@+id/rbMale"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_marginStart="@dimen/_20pxh"
                android:id="@+id/rbFamale"
                android:layout_height="wrap_content"
                android:text="Famale" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_height="wrap_content"
                android:id="@+id/rbOrther"
                android:text="Orther"/>
        </RadioGroup>
        <TextView android:ellipsize="end" android:id="@+id/txtEmailId"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_36pxh"
            android:layout_marginStart="@dimen/_36pxh"
            android:layout_marginTop="@dimen/_18pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@string/phone_number"
            style="@style/txtPoppinsmedium14" />
        <EditText
            android:background="@drawable/rectangle_border_gray_500_radius_8"
            android:ellipsize="end"
            android:hint="+84"
            android:id="@+id/etPhoneNumber"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_36pxh"
            android:layout_marginStart="@dimen/_36pxh"
            android:layout_marginTop="@dimen/_2pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_10pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_12pxh"
            android:paddingTop="@dimen/_11pxv" android:singleLine="true"
            android:textColorHint="@color/black_900"
            style="@style/etRoundedOutline" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end" android:id="@+id/txtAddress"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_36pxh"
            android:layout_marginStart="@dimen/_36pxh"
            android:layout_marginTop="@dimen/_18pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@string/address"
            style="@style/txtPoppinsmedium14"/>
        <EditText
            android:background="@drawable/rectangle_border_gray_500_radius_8"
            android:ellipsize="end"
            android:hint="city"
            android:id="@+id/etAddress" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_36pxh"
            android:layout_marginStart="@dimen/_36pxh"
            android:layout_marginTop="@dimen/_2pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_9pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_12pxh"
            android:paddingTop="@dimen/_12pxv" android:singleLine="true"
            android:textColorHint="@color/black_900"
            style="@style/etRoundedOutline" tools:ignore="Autofill"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnNext"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_36pxh"
            android:layout_marginStart="@dimen/_36pxh"
            android:layout_marginTop="@dimen/_65pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_8pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_8pxv"
            android:text="Next"
            android:textAllCaps="false" style="@style/btnSolidRounded"/>
    </LinearLayout>
</layout>
